--- a/csharp/Homework01/IDAL/IDAL.csproj
+++ b/csharp/Homework01/IDAL/IDAL.csproj
@@ -41,7 +41,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IBaseDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CommonFramwork\CommonFramwork.csproj">
+      <Project>{a72be208-51da-48fc-9310-be996c614273}</Project>
+      <Name>CommonFramwork</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Model\Model.csproj">
+      <Project>{afaea3ba-fe94-4e53-884d-c708ee2ff087}</Project>
+      <Name>Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
