--- a/csharp/Homework01/DAL/DAL.csproj
+++ b/csharp/Homework01/DAL/DAL.csproj
@@ -92,9 +92,17 @@
       <Project>{a72be208-51da-48fc-9310-be996c614273}</Project>
       <Name>CommonFramwork</Name>
     </ProjectReference>
+    <ProjectReference Include="..\IDAL\IDAL.csproj">
+      <Project>{1C3605B6-AF8E-474D-A626-6763664AEB6C}</Project>
+      <Name>IDAL</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Model\Model.csproj">
       <Project>{afaea3ba-fe94-4e53-884d-c708ee2ff087}</Project>
       <Name>Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Ulti\Ulti.csproj">
+      <Project>{acb44d8f-edf0-4857-b314-7c8e682b0ef6}</Project>
+      <Name>Ulti</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
