--- a/csharp/Homework01/CommonFramwork/CommonFramwork.csproj
+++ b/csharp/Homework01/CommonFramwork/CommonFramwork.csproj
@@ -44,7 +44,13 @@
   <ItemGroup>
     <Compile Include="AttributeExtend\AttributeHelper.cs" />
     <Compile Include="AttributeExtend\Mapping\ColumnAttribute.cs" />
+    <Compile Include="AttributeExtend\Validate\MobileAttribute.cs" />
+    <Compile Include="AttributeExtend\Validate\EmailAttribute.cs" />
+    <Compile Include="AttributeExtend\Validate\LengthAttribute.cs" />
     <Compile Include="AttributeExtend\Validate\AbstractValidateAttribute.cs" />
+    <Compile Include="AttributeExtend\Validate\LongAttribute.cs" />
+    <Compile Include="AttributeExtend\Validate\RegexAttribute.cs" />
+    <Compile Include="Model\BaseModel.cs" />
     <Compile Include="StaticConstant.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
