--- a/csharp/Homework01/DAL/DAL.csproj
+++ b/csharp/Homework01/DAL/DAL.csproj
@@ -86,6 +86,7 @@
   <ItemGroup>
     <Compile Include="BaseDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TSqlHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CommonFramwork\CommonFramwork.csproj">
