--- a/csharp/Example/Example/Example.csproj
+++ b/csharp/Example/Example/Example.csproj
@@ -49,5 +49,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AOP\AOP.csproj">
+      <Project>{AE30082C-3150-42FC-993E-989B6C4BAAF1}</Project>
+      <Name>AOP</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
