--- a/csharp/Homework02/Performer/Performer.csproj
+++ b/csharp/Homework02/Performer/Performer.csproj
@@ -4,17 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1495C680-78C6-4652-AB3D-B7D8BFAE6129}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>MyAttribute</RootNamespace>
-    <AssemblyName>MyAttribute</AssemblyName>
+    <ProjectGuid>{2AEB0285-AC57-48AB-9225-2A0D31949B12}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>Performer</RootNamespace>
+    <AssemblyName>Performer</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,7 +23,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -33,6 +31,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Accessibility" />
+    <Reference Include="Microsoft.Practices.Unity.Interception">
+      <HintPath>..\..\Example\packages\Unity.Interception.3.0.1304.0\lib\Net45\Microsoft.Practices.Unity.Interception.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -43,21 +45,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CustomAttribute.cs" />
-    <Compile Include="Extension\RemarkExtension.cs" />
-    <Compile Include="Extension\ValidateExtension.cs" />
-    <Compile Include="Manager.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="EastStyle.cs" />
+    <Compile Include="MidStyle.cs" />
+    <Compile Include="NorthStyle.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Student.cs" />
+    <Compile Include="SouthStyle.cs" />
+    <Compile Include="WestStyle.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\AOP\AOP.csproj">
-      <Project>{AE30082C-3150-42FC-993E-989B6C4BAAF1}</Project>
-      <Name>AOP</Name>
+    <ProjectReference Include="..\H02AOP\H02AOP.csproj">
+      <Project>{34127716-B728-4F79-84ED-E5FEC55579C7}</Project>
+      <Name>H02AOP</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Interface\H02Interface.csproj">
+      <Project>{c8fb8734-3933-42bf-a5c1-95d5be72b19b}</Project>
+      <Name>H02Interface</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Ulti\Ulti.csproj">
+      <Project>{E1B3C5A4-794B-4E66-AADB-55CEEFEE7F10}</Project>
+      <Name>Ulti</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
