--- a/csharp/ExpressionDemo/ExpressionDemo/ExpressionDemo.csproj
+++ b/csharp/ExpressionDemo/ExpressionDemo/ExpressionDemo.csproj
@@ -46,13 +46,20 @@
     <Compile Include="ActionFunc.cs" />
     <Compile Include="ExpressionTest.cs" />
     <Compile Include="ExpressionTreeVisualizer.cs" />
-    <Compile Include="ExpressionVisitorTest.cs" />
     <Compile Include="MappingExtend\ExpressionGenericMapping.cs" />
     <Compile Include="MappingExtend\ExpressionMapping.cs" />
+    <Compile Include="Visitor\ExpressionCustomAnd.cs" />
+    <Compile Include="Visitor\ExpressionCustomeVisitor.cs" />
+    <Compile Include="Visitor\ExpressionCustomNot.cs" />
+    <Compile Include="Visitor\ExpressionTypeToSqlOperator.cs" />
+    <Compile Include="Visitor\ExpressionVisitorTest.cs" />
+    <Compile Include="Visitor\OperationsVisitor.cs" />
     <Compile Include="People.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MappingExtend\ReflectionMapper.cs" />
+    <Compile Include="Visitor\ConditionBuilderVisitor.cs" />
+    <Compile Include="Visitor\ShowVisitorRunningStep.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
